fix(#3): try fix shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,7 +16,6 @@ body {
   background: var(--white, #FFFFFF);
   font: var(--p-secondary, normal 500 24px/1.4, var(--Roboto), Arial, Helvetica, sans-serif);
   width: 100%;
-  scrollbar-gutter: stable;
 }
 
 html:has(.modal[open]),
